--- a/index.html
+++ b/index.html
@@ -1,54 +1,130 @@
-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistema de Pontos</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+    }
+
+    h1 {
+      text-align: center;
+      color: #ffffff;
+    }
+
+    .score {
+      font-size: 20px;
+      margin: 10px 0 20px;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 30px;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #6a11cb;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      color: white;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #2575fc;
+    }
+
+    .band-quote {
+      margin-bottom: 20px;
+      padding: 15px;
+      background-color: #1c1c2c;
+      border-left: 5px solid #6a11cb;
+      border-radius: 10px;
+    }
+
+    .band-quote img {
+      width: 30px;
+      vertical-align: middle;
+      margin-right: 10px;
+    }
+
+    .band-name {
+      font-weight: bold;
+      color: #ff69b4;
+    }
+
+    .miw {
+      color: #db3eb1;
+    }
+
+    .song {
+      font-style: italic;
+      color: #00d4ff;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>Sistema de Pontos</h1>
-    <div id="pointsDisplay">Pontos: 0</div>
-    <button onclick="addPoints(1)">+1 ponto</button>
-    <button onclick="resetPoints()">Resetar</button>
-
-    <div class="band">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3f/Paramore_logo.svg" alt="Paramore" />
-      <p title="Mesmo quando tudo parece perdido, uma faísca é suficiente para continuar.">
-        💬 <strong>Paramore:</strong> "It's just a spark, but it's enough to keep me going..." – <em>Last Hope</em>
-      </p>
+    <p class="score">Pontos: <span id="score">0</span></p>
+    <div class="buttons">
+      <button onclick="addPoint()">+1 ponto</button>
+      <button onclick="resetScore()">Resetar</button>
     </div>
 
-    <div class="band">
-      <img src="https://upload.wikimedia.org/wikipedia/pt/3/3f/Motionless_in_White_logo.png" alt="Motionless in White" />
-      <p title="A música que representa seu apego, saudade e o desejo de ser resgatado.">
-        💬 <strong>Motionless in White:</strong> "If I can't let go, will you carry me home?" – <em>Another Life</em>
-      </p>
+    <div class="band-quote">
+      <span class="band-name">💬 Paramore:</span> "It's just a spark, but it's enough to keep me going..." – <span class="song">Last Hope</span>
     </div>
 
-    <div class="band">
-      <img src="https://upload.wikimedia.org/wikipedia/pt/1/10/Twilight_Poster.jpg" alt="Decode - Paramore" />
-      <p title="A música que te inseriu no universo do Paramore, seu primeiro contato marcante.">
-        💬 <strong>Paramore:</strong> "How did we get here, when I used to know you so well?" – <em>Decode</em>
-      </p>
+    <div class="band-quote">
+      <span class="band-name miw">💬 Motionless in White:</span> "If I can't let go, will you carry me home?" – <span class="song">Another Life</span>
     </div>
 
-    <div class="band">
-      <img src="https://upload.wikimedia.org/wikipedia/en/f/f1/Paramore_-_The_Only_Exception.png" alt="The Only Exception - Paramore" />
-      <p title="A música que te motivou a querer aprender violão. Representa algo puro e emocional.">
-        💬 <strong>Paramore:</strong> "You are the only exception..." – <em>The Only Exception</em>
-      </p>
+    <div class="band-quote">
+      <span class="band-name">💬 Paramore:</span> "How did we get here, when I used to know you so well?" – <span class="song">Decode</span>
     </div>
 
-    <div class="band">
-      <img src="https://upload.wikimedia.org/wikipedia/en/e/e6/Motionless_in_White_-_Disguise.png" alt="Code - Motionless in White" />
-      <p title="Uma das favoritas, com uma letra que mistura metáfora, caos e profundidade emocional.">
-        💬 <strong>Motionless in White:</strong> "Tell me how it's all in code..." – <em>Code</em>
-      </p>
+    <div class="band-quote">
+      <span class="band-name">💬 Paramore:</span> "You are the only exception..." – <span class="song">The Only Exception</span>
+    </div>
+
+    <div class="band-quote">
+      <span class="band-name miw">💬 Motionless in White:</span> "Tell me how it's all in code..." – <span class="song">Code</span>
     </div>
   </div>
-  <script src="script.js"></script>
+
+  <script>
+    let score = 0;
+    const scoreDisplay = document.getElementById('score');
+
+    function addPoint() {
+      score++;
+      scoreDisplay.textContent = score;
+    }
+
+    function resetScore() {
+      score = 0;
+      scoreDisplay.textContent = score;
+    }
+  </script>
 </body>
 </html>
